--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1063578363505152081/1078429459973156914/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -12,7 +12,7 @@
 
     
 
-    <title>React App</title>
+    <title>SettleOut</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
